# Ask-My-Docs

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sample_docs/: orbit-api.md  orbit-handbook.md
docs/: architecture.md
evals/: README.md  dataset.jsonl  run_evals.py
src/ask_my_docs/: __init__.py  chunking.py  cli.py  config.py  ingest.py  llm.py  metrics.py  rag.py  store.py
tests/: conftest.py  test_chunking.py  test_integration_store.py  test_llm.py  test_metrics.py
