[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-my-docs"
version = "0.1.0"
description = "A small, production-minded RAG system over your own documents, with an evaluation harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "anthropic>=0.40",
  "chromadb>=0.5",
  "pypdf>=4.0",
  "typer>=0.12",
  "rich>=13.0",
  "python-dotenv>=1.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
ask-my-docs = "ask_my_docs.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ask_my_docs"]

[tool.pytest.ini_options]
markers = [
  "integration: tests that touch Chroma's on-disk store (opt-in via RUN_INTEGRATION=1)",
]
filterwarnings = [
  # Chroma's evolving embedding-function protocol nags about the toy test embedder.
  "ignore:The class HashEmbeddingFunction does not implement.*:DeprecationWarning",
  "ignore:legacy embedding function config.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
src = ["src", "tests", "evals"]

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
